manifests/automuteus-bot/automuteus-bot.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: automuteus-bot
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: automuteus-bot
spec:
  template:
    spec:
      containers:
        - name: bot
          image: denverquane/amongusdiscord:3.1.0
          resources:
            requests:
              cpu: 1000m
              memory: 1024Mi
            limits:
              cpu: 2000m
              memory: 2048Mi
          livenessProbe:
            tcpSocket:
              port: 8123
          readinessProbe:
            tcpSocket:
              port: 8123
---
kind: Service
apiVersion: v1
metadata:
  name: automuteus-bot
spec:
  ports:
    - port: 80
      targetPort: 8123
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: automuteus-bot
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  tls:
    - hosts:
        - "*.automute.us"
      secretName: wildcard-automute-us-tls
  rules:
    - host: botonk8s.automute.us
      http:
        paths:
          - backend:
              serviceName: automuteus-bot
              servicePort: 80
            path: /
#################### cronjob for autoupdate
